# AI_agent

./: .dockerignore  .env  Dockerfile  README.md  docker-compose.yml  requirement.txt
video_summary/: README.md  pyproject.toml  setup_environment.py  test_gpu.py
video_summary/src/video_summary/: Video_Summary  crew.py  main.py
video_summary/src/video_summary/None/: Video_Summary
video_summary/src/video_summary/config/: agents.yaml  tasks.yaml
