[project]
name = "video_summary"
version = "0.1.0"
description = "video-summary using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
video_summary = "video_summary.main:run"
run_crew = "video_summary.main:run"
train = "video_summary.main:train"
replay = "video_summary.main:replay"
test = "video_summary.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
